# boilerplate-templates

./: .gitignore  LICENSE  README.md
.github/workflows/: python-poetry.yaml  repo-scan.yaml  terraform-aws.yaml  typescript-cloudflare-worker.yaml  typescript-express.yaml  typescript-library.yaml
boilerplate-template/: README.md  cookiecutter.json
boilerplate-template/{{ cookiecutter.project_slug }}/: README.md  cookiecutter.json
python-poetry/: README.md  cookiecutter.json
python-poetry/{{ cookiecutter.project_name }}/: .gitignore  README.md  pyproject.toml  run-checks.sh
python-poetry/{{ cookiecutter.project_name }}/tests/: test_main.py
terraform-aws/: README.md  cookiecutter.json
terraform-aws/hooks/: post_gen_project.py
terraform-aws/{{ cookiecutter.project_slug }}-infra/: .gitignore  README.md  apply-to-env.sh  main.tf  provider.tf  variables.tf
terraform-aws/{{ cookiecutter.project_slug }}-infra/bootstrap/: bootstrap-env.sh  main.tf
typescript-cli/: README.md  cookiecutter.json
typescript-cli/{{ cookiecutter.project_slug }}/: README.md  package.json  run.js  vitest.config.ts
typescript-cli/{{ cookiecutter.project_slug }}/src/: index.ts
typescript-cloudflare-worker/: README.md  cookiecutter.json
typescript-cloudflare-worker/{{ cookiecutter.project_slug }}/: README.md  package.json  runtime.d.ts  tsconfig.json  vitest.config.mts  vitest.config.worker.mts  worker-configuration.d.ts  wrangler.toml
typescript-cloudflare-worker/{{ cookiecutter.project_slug }}/src/: index.ts  index.worker.test.ts  sample-unit.test.ts
typescript-express/: README.md  cookiecutter.json  tsconfig.build.json
typescript-express/{{ cookiecutter.project_slug }}/: README.md  package.json  tsconfig.json
typescript-express/{{ cookiecutter.project_slug }}/src/: config.ts  index.ts
typescript-express/{{ cookiecutter.project_slug }}/src/middleware/: access-logs.test.ts  access-logs.ts  error.test.ts  error.ts
typescript-express/{{ cookiecutter.project_slug }}/src/routes/: health.test.ts  status.test.ts  status.ts
typescript-library/: README.md  cookiecutter.json
typescript-library/test/: package.json  test.ts  tsconfig.json
typescript-library/{{ cookiecutter.project_slug }}/: .npmignore  eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts
typescript-library/{{ cookiecutter.project_slug }}/src/: index.test.ts  index.ts
typescript-nextjs/: README.md
typescript-nextjs/{{ cookiecutter.project_slug }}/frontend/: README.md  package.json  tsconfig.json  vitest.config.mts
(+5 files in other folders)
